tests/ui/lexer/emoji-in-lifetime.stderr
error: identifiers cannot contain emoji: `'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦`
  --> $DIR/emoji-in-lifetime.rs:3:5
   |
LL |     'рџђ›рџђ›рџђ›familyрџ‘Ёрџ‘©рџ‘§рџ‘¦,
   |     ^^^^^^^^^^^^^^^^^^^^^

error: identifiers cannot contain emoji: `'aрџђ›`
  --> $DIR/emoji-in-lifetime.rs:5:5
   |
LL |     'aрџђ›,
   |     ^^^^
...
LL |     'aрџђ›: { // pointed at on the error from line 5
   |     ^^^^

error: identifiers cannot contain emoji: `'1рџђ›`
  --> $DIR/emoji-in-lifetime.rs:6:5
   |
LL |     '1рџђ›,
   |     ^^^^

error: lifetimes cannot start with a number: `'12`
  --> $DIR/emoji-in-lifetime.rs:4:6
   |
LL |     '12,
   |     -^-

error: lifetimes cannot start with a number: `'1рџђ›`
  --> $DIR/emoji-in-lifetime.rs:6:6
   |
LL |     '1рџђ›,
   |     -^--

error: lifetimes cannot start with a number: `'1`
  --> $DIR/emoji-in-lifetime.rs:8:5
   |
LL |     '1,
   |     ^^

error: aborting due to 6 previous errors

